--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "axios": "^1.1.2",
+    "firebase": "^9.11.0",
     "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
