--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.6"
   },
   "devDependencies": {
     "eslint": "8.22.0",
